# sokit

./: .gitignore  CMakeLists.txt  README.md  sokit.sln
doc/sokit/: readme.txt
src/sokit/: baseform.cpp  baseform.h  clientform.cpp  clientform.h  clientform.ui  clientskt.cpp  clientskt.h  helpform.cpp  helpform.h  helpform.ui  icons.qrc  logger.cpp  logger.h  main.cpp  main.h  notepadform.cpp  notepadform.h  resource.h  serverform.cpp  serverform.h  serverform.ui  serverskt.cpp  serverskt.h  setting.cpp  setting.h  sokit.rc  sokit.ts  sokit.vcproj  toolkit.cpp  toolkit.h  transferform.cpp  transferform.h  transferform.ui  transferskt.cpp  transferskt.h
